--- a/nodes/klicktipp-resend-autoresponder.html
+++ b/nodes/klicktipp-resend-autoresponder.html
@@ -9,9 +9,9 @@
 		<input type="hidden" id="node-input-emailType">
 	</div>
 	<div class="form-row">
-		<label for="node-input-autoresponder"><i class="fa fa-mobile"></i> <span>Autoresponder</span></label>
-		<input type="text" id="node-input-autoresponder" placeholder="Enter the ID of the autoresponder (optional)">
-		<input type="hidden" id="node-input-autoresponderType">
+		<label for="node-input-autoresponderId"><i class="fa fa-mobile"></i> <span>Autoresponder</span></label>
+		<input type="text" id="node-input-autoresponderId" placeholder="Enter the ID of the autoresponder (optional)">
+		<input type="hidden" id="node-input-autoresponderIdType">
 	</div>
 	<div class="form-row">
 		<label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
@@ -20,55 +20,45 @@
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp resend autoresponder">
-	<p>Resends an autoresponder to a subscriber (identified by their email) in KlickTipp.</p>
+	<p>Resends a follow-up email to a subscriber.</p>
 
-	   <h3>Details</h3>
-	   <p>
-	       This node resends an autoresponder to a subscriber in KlickTipp using their email and the autoresponder ID provided in <code>msg.payload.email</code> and <code>msg.payload.autoresponder</code>.
-	       The session key for retrieving session data is passed automatically from the <strong>KlickTipp Login</strong> node.
-	   </p>
-	   <p>
-	       If the operation is successful, the output message will contain <code>msg.payload.success = true</code>. On failure, <code>msg.payload.success</code> will be <code>false</code> and an error message
-	       will be returned in <code>msg.error</code>.
-	   </p>
+   <h3>Inputs</h3>
+   <dl class="message-properties">
+	   <dt>msg.payload <span class="property-type">object</span></dt>
+	   <dd>
+		   The payload must contain:
+		   <ul>
+			   <li><code>email</code> - (Required) the subscriber's email address</li>
+			   <li><code>autoresponderId</code> - (Required) the ID of the follow-up email</li>
+		   </ul>
+	   </dd>
+   </dl>
 
-	   <h3>Inputs</h3>
-	   <dl class="message-properties">
-	       <dt>msg.payload <span class="property-type">object</span></dt>
-	       <dd>
-	           The payload must contain:
-	           <ul>
-	               <li><code>email</code> - (Required) The email address of the subscriber to resend the autoresponder to.</li>
-	               <li><code>autoresponder</code> - (Required) The ID of the autoresponder to be resent.</li>
-	           </ul>
-	       </dd>
-	   </dl>
+   <h3>Outputs</h3>
+   <dl class="message-properties">
+	   <dt>msg.payload <span class="property-type">object</span></dt>
+	   <dd>
+		   On success:
+		   <ul>
+			   <li><code>{ success: true }</code></li>
+		   </ul>
+	   </dd>
+	   <dd>
+		   On failure:
+		   <ul>
+			   <li><code>{ success: false }</code></li>
+		   </ul>
+	   </dd>
 
-	   <h3>Outputs</h3>
-	   <dl class="message-properties">
-	       <dt>msg.payload <span class="property-type">object</span></dt>
-	       <dd>
-	           On success:
-	           <ul>
-	               <li><code>{ success: true }</code></li>
-	           </ul>
-	       </dd>
-	       <dd>
-	           On failure:
-	           <ul>
-	               <li><code>{ success: false }</code></li>
-	           </ul>
-	       </dd>
+	   <dt>msg.error <span class="property-type">string</span></dt>
+	<dd>An error message indicating why the request failed.</dd>
+   </dl>
 
-	       <dt>msg.error <span class="property-type">string</span></dt>
-		<dd>An error message indicating why the request failed.</dd>
-	   </dl>
-
-	   <h3>Node Status</h3>
-	   <ul>
-	       <li><strong>Green (dot)</strong> - The autoresponder was resent successfully.</li>
-	       <li><strong>Red (ring)</strong> - The autoresponder resending process failed (e.g., missing email, autoresponder ID, or API error).</li>
-	   </ul>
+   <h3>Node Status</h3>
+   <ul>
+	   <li><strong>Green (dot)</strong> - The autoresponder was resent successfully.</li>
+	   <li><strong>Red (ring)</strong> - The autoresponder resending process failed (e.g., missing email, autoresponder ID, or API error).</li>
+   </ul>
 </script>
 
 <script type="text/javascript">
@@ -86,11 +76,11 @@
 			emailType: {
 				value: 'str'
 			},
-			autoresponder: {
+			autoresponderId: {
 				value: 0,
 				validate: RED.validators.typedInput('autoresponderType')
 			},
-			autoresponderType: {
+			autoresponderIdType: {
 				value: 'num'
 			},
 		},
@@ -102,7 +92,7 @@
 		},
 		oneditprepare: function() {
 			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
-			ktInitializeTypedInput("#node-input-autoresponder", "#node-input-autoresponderType", 'num', ['num']);
+			ktInitializeTypedInput("#node-input-autoresponderId", "#node-input-autoresponderTypeId", 'num', ['num']);
 		},
 	});
 </script>
