--- a/nodes/klicktipp-subscriber-delete.html
+++ b/nodes/klicktipp-subscriber-delete.html
@@ -15,29 +15,15 @@
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp subscriber delete">
-	<p>Deletes a subscriber in KlickTipp by their subscriber ID.</p>
-
-	<h3>Details</h3>
-	<p>
-	    This node deletes a subscriber in KlickTipp using their subscriber ID. The subscriber ID must be provided in <code>msg.payload.subscriberId</code>.
-	</p>
-	<p>
-		If the subscriber is successfully deleted, the output message will contain <code>msg.payload.success = true</code>.
-	</p>
-	<p>
-		On failure, <code>msg.payload.success</code> will be <code>false</code>, and an error message will be returned in <code>msg.error</code>.
-	</p>
-	<p>
-	    It requires valid session information. The session key for retrieving session data is passed automatically from the <strong>KlickTipp Login</strong> node.
-	</p>
+	<p>Deletes a subscriber.</p>
 
 	<h3>Inputs</h3>
 	<dl class="message-properties">
 	    <dt>msg.payload <span class="property-type">object</span></dt>
 	    <dd>
-	        An object that must contain:
+	        Expected object with the following properties
 	        <ul>
-	            <li><code>subscriberId</code> - (Required) The ID of the subscriber to be deleted.</li>
+	            <li><code>subscriberId</code> - (Required) the subscriber's ID</li>
 	        </ul>
 	    </dd>
 	</dl>
