--- a/nodes/klicktipp-subscriber-tag.html
+++ b/nodes/klicktipp-subscriber-tag.html
@@ -1,4 +1,4 @@
-<script type="text/x-red" data-template-name="klicktipp tag email">
+<script type="text/x-red" data-template-name="klicktipp subscriber tag">
 	<div class="form-row">
 	    <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
 	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
@@ -20,33 +20,20 @@
 	</div>
 </script>
 
-<script type="text/x-red" data-help-name="klicktipp tag email">
-	<p>Tags a subscriber (identified by their email) with one or more tags in KlickTipp.</p>
-
-	<h3>Details</h3>
-	<p>
-	    This node tags a subscriber in KlickTipp using their email and a list of tag IDs. The email and tag IDs must be provided in
-	    <code>msg.payload.email</code> and <code>msg.payload.tagIds</code>, respectively. If only a single tag ID is provided, it will be converted
-	    into an array.
-	</p>
-	<p>
-	    If the operation is successful, the <code>msg.payload</code> will contain <code>{ success: true }</code>.
-	</p>
-	<p>
-	    On failure, <code>msg.payload</code> will contain <code>{ success: false }</code>, and an error message will be returned in <code>msg.error</code>.
-	</p>
-	<p>
-	    It requires valid session information. The session key for retrieving session data is passed automatically from the <strong>KlickTipp Login</strong> node.
-	</p>
+<script type="text/x-red" data-help-name="klicktipp subscriber tag">
+	<p>Tags a subscriber with a manual tag or SmartLink.</p>
 
 	<h3>Inputs</h3>
 	<dl class="message-properties">
 	    <dt>msg.payload <span class="property-type">object</span></dt>
 	    <dd>
-	        An object that must contain:
+	        Expected object with the following properties
 	        <ul>
-	            <li><code>email</code> - (Required) The email address of the subscriber to be tagged.</li>
-	            <li><code>tagIds</code> - (Required) An array of tag IDs or a single tag ID to associate with the subscriber. If a single tag ID is provided, it will be converted into an array.</li>
+	            <li><code>email</code> - (Required) the subscriber's email address</li>
+	            <li><code>tagIds</code> - (Required) The ID of a manual tag or SmartLink.
+	            	You can also pass an array of tag IDs to assign multiple tags at once.
+	            	If a single tag ID is provided, it will be automatically placed in an array.
+	            </li>
 	        </ul>
 	    </dd>
 	</dl>
@@ -79,7 +66,7 @@
 </script>
 
 <script type="text/javascript">
-	RED.nodes.registerType('klicktipp tag email', {
+	RED.nodes.registerType('klicktipp subscriber tag', {
 		category: 'KlickTipp',
 		color: '#F2F2F2',
 		defaults: {
@@ -101,11 +88,11 @@
 		outputs: 1,
 		icon: 'klicktipp.png',
 		label: function () {
-			return this.name || 'KlickTipp Tag Email';
+			return this.name || 'Subscriber Tag';
 		},
 		oneditprepare: function() {
 			const tagDropdown = $('#node-input-tagId');
-			ktPopulateDropdown(tagDropdown, this.tagId, '/klicktipp/tags/tag-email-node');
+			ktPopulateDropdown(tagDropdown, this.tagId, '/klicktipp/tags/subscriber-tag-node');
 			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
 
 			// Set a minimum height for better UX
