--- a/nodes/klicktipp-subscriber-untag.html
+++ b/nodes/klicktipp-subscriber-untag.html
@@ -1,4 +1,4 @@
-<script type="text/x-red" data-template-name="klicktipp untag email">
+<script type="text/x-red" data-template-name="klicktipp subscriber untag">
 	<div class="form-row">
 	    <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
 	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
@@ -20,32 +20,17 @@
 	</div>
 </script>
 
-<script type="text/x-red" data-help-name="klicktipp untag email">
-	<p>Removes a tag from a subscriber (identified by their email) in KlickTipp.</p>
-
-	<h3>Details</h3>
-	<p>
-	    This node removes a tag from a subscriber in KlickTipp using their email and the tag ID. The email and tag ID must be provided in
-	    <code>msg.payload.email</code> and <code>msg.payload.tagId</code>.
-	</p>
-	<p>
-	    If the operation is successful, <code>msg.payload</code> will contain code>{ success: true }</code>.
-	</p>
-	<p>
-	    On failure, <code>msg.payload</code> will contain <code>{ success: false }</code>, and an error message will be returned in <code>msg.error</code>.
-	</p>
-	<p>
-	    It requires valid session information. The session key for retrieving session data is passed automatically from the <strong>KlickTipp Login</strong> node.
-	</p>
+<script type="text/x-red" data-help-name="klicktipp subscriber untag">
+	<p>Removes a manual tag or SmartLink from a subscriber.</p>
 
 	<h3>Inputs</h3>
 	<dl class="message-properties">
 	    <dt>msg.payload <span class="property-type">object</span></dt>
 	    <dd>
-	        An object that must contain:
+	        Expected object with the following properties
 	        <ul>
-	            <li><code>email</code> - (Required) The email address of the subscriber to untag.</li>
-	            <li><code>tagId</code> - (Required) The ID of the tag to be removed from the subscriber.</li>
+	            <li><code>email</code> - (Required) the subscriber's email address</li>
+	            <li><code>tagId</code> - (Required) the ID of a manual tag or SmartLink</li>
 	        </ul>
 	    </dd>
 	</dl>
@@ -78,7 +63,7 @@
 </script>
 
 <script type="text/javascript">
-	RED.nodes.registerType('klicktipp untag email', {
+	RED.nodes.registerType('klicktipp subscriber untag', {
 		category: 'KlickTipp',
 		color: '#F2F2F2',
 		defaults: {
@@ -102,11 +87,11 @@
 		outputs: 1,
 		icon: 'klicktipp.png',
 		label: function () {
-			return this.name || 'KlickTipp Untag Email';
+			return this.name || 'Subscriber Untag';
 		},
 		oneditprepare: function() {
 			const tagDropdown = $('#node-input-tagId');
-			ktPopulateDropdown(tagDropdown, this.tagId, '/klicktipp/tags/untag-email-node');
+			ktPopulateDropdown(tagDropdown, this.tagId, '/klicktipp/tags/subscriber-untag-node');
 		},
 		// When the node editor is saved, capture the selected tagId
 		oneditsave: function() {
