--- a/nodes/klicktipp-subscriber-update.html
+++ b/nodes/klicktipp-subscriber-update.html
@@ -31,32 +31,18 @@
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp subscriber update">
-	<p>Update a subscriber in KlickTipp by their subscriber ID.</p>
-
-	<h3>Details</h3>
-	<p>
-	    This node updates a subscriber in KlickTipp using their subscriber ID. The subscriber ID must be provided in <code>msg.payload.subscriberId</code>.
-	</p>
-	<p>
-	    If the operation is successful, the output message will contain <code>msg.payload.success = true</code>.
-	</p>
-	<p>
-		On failure, <code>msg.payload</code> will contain <code>{ success: false }</code>, and an error message will be returned in <code>msg.error</code>.
-	</p>
-	<p>
-	    It requires valid session information. The session key for retrieving session data is passed automatically from the <strong>KlickTipp Login</strong> node.
-	</p>
+	<p>Updates the data fields, email address, or SMS number of a subscriber.</p>
 
 	<h3>Inputs</h3>
 	<dl class="message-properties">
 	    <dt>msg.payload <span class="property-type">object</span></dt>
 	    <dd>
-	        An object that must contain:
+	        Expected object with the following properties::
 	        <ul>
-	            <li><code>subscriberId</code> - (Required) The ID of the subscriber to be updated.</li>
-	            <li><code>fields</code> - (Optional) An object representing fields to update for the subscriber.</li>
-	            <li><code>newEmail</code> - (Optional) The new email address for the subscriber.</li>
-	            <li><code>newSmsNumber</code> - (Optional) The new SMS number for the subscriber.</li>
+	            <li><code>subscriberId</code> - (Required) the subscriber's ID</li>
+	            <li><code>fields</code> - (Optional) an object with data fields (e.g., first name, last name, address, etc.), structured as returned by the <code>field_index</code> node</li>
+	            <li><code>newEmail</code> - (Optional) the subscriber's new email address</li>
+	            <li><code>newSmsNumber</code> - (Optional) the subscriber's new mobile number</li>
 	        </ul>
 	    </dd>
 	</dl>
