--- a/nodes/klicktipp-tag-update.html
+++ b/nodes/klicktipp-tag-update.html
@@ -26,32 +26,17 @@
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp tag update">
-	<p>Updates an existing manual tag in the KlickTipp API.</p>
-
-	<h3>Details</h3>
-	<p>
-	    This node updates an existing manual tag in the KlickTipp system. It requires the <code>tagId</code> in <code>msg.payload</code>.
-	    The <code>name</code> and <code>text</code> fields are optional and can be provided to update the tag's name and description.
-	</p>
-	<p>
-	    On success, it returns <code>msg.payload.success</code> as <code>{ success: true }</code>.
-	</p>
-	<p>
-	    On failure, <code>msg.payload</code> will contain <code>{ success: false }</code>, and an error message will be returned in <code>msg.error</code>.
-	</p>
-	<p>
-	    It requires valid session information. The session key for retrieving session data is passed automatically from the <strong>KlickTipp Login</strong> node.
-	</p>
+	<p>Updates a manual tag or SmartLink.</p>
 
 	<h3>Inputs</h3>
 	<dl class="message-properties">
 	    <dt>msg.payload <span class="property-type">object</span></dt>
 	    <dd>
-	        An object that must contain:
+	        Expected object with the following properties::
 	        <ul>
-	            <li><code>tagId</code> - (Required) The ID of the tag to update.</li>
-	            <li><code>name</code> - (Optional) The new name for the tag.</li>
-	            <li><code>text</code> - (Optional) The new description for the tag.</li>
+	            <li><code>tagId</code> - (Required) the ID of the tag</li>
+	            <li><code>name</code> - (Optional) the new name of the manual tag</li>
+	            <li><code>text</code> - (Optional) the new description of the manual tag</li>
 	        </ul>
 	    </dd>
 	</dl>
