--- a/nodes/klicktipp-resend-autoresponder.html
+++ b/nodes/klicktipp-resend-autoresponder.html
@@ -26,7 +26,7 @@
    <dl class="message-properties">
 	   <dt>msg.payload <span class="property-type">object</span></dt>
 	   <dd>
-		   The payload must contain:
+		   Expected object with the following properties:
 		   <ul>
 			   <li><code>email</code> - (Required) the subscriber's email address</li>
 			   <li><code>autoresponderId</code> - (Required) the ID of the follow-up email</li>
