--- a/nodes/klicktipp-subscriber-signout.html
+++ b/nodes/klicktipp-subscriber-signout.html
@@ -22,7 +22,7 @@
    <dl class="message-properties">
 	   <dt>msg.payload <span class="property-type">object</span></dt>
 	   <dd>
-		   Must contain:
+		   Expected object with the following properties:
 		   <ul>
 			   <li><code>apiKey</code> - (Required) the API key for authentication</li>
 			   <li><code>email</code> - (Required) (Required) the subscriber's email address</li>
