--- a/nodes/klicktipp-subscriber-signin.html
+++ b/nodes/klicktipp-subscriber-signin.html
@@ -37,7 +37,7 @@
 	<dl class="message-properties">
 	   <dt>msg.payload <span class="property-type">object</span></dt>
 	   <dd>
-		   Must contain:
+		   Expected object with the following properties:
 		   <ul>
 			   <li><code>apiKey</code> - (Required) the API key for authentication</li>
 			   <li><code>email</code> - (Required) the subscriber's email address</li>
