--- a/nodes/klicktipp-subscriber-tag.html
+++ b/nodes/klicktipp-subscriber-tag.html
@@ -1,4 +1,8 @@
+<!-- Select2 JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
+
 <script type="text/x-red" data-template-name="klicktipp subscriber tag">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
 	<div class="form-row">
 	    <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
 	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
@@ -10,9 +14,7 @@
 	</div>
     <div class="form-row">
         <label for="node-input-tagId"><i class="fa fa-tag"></i> <span>Tags</span></label>
-        <select id="node-input-tagId" multiple style="height: auto; width: 100%;">
-            <!-- Tags will be populated here -->
-        </select>
+        <select id="node-input-tagId" class="js-example-basic-multiple" multiple="multiple"></select>
     </div>
 	<div class="form-row">
 	    <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
@@ -95,14 +97,16 @@
 			ktPopulateDropdown(tagDropdown, this.tagId, '/klicktipp/tags/subscriber-tag-node');
 			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
 
-			// Set a minimum height for better UX
-			tagDropdown.css({
-				'min-height': '100px', // Adjust height to accommodate multiple selections
-				'width': '100%'
+			// Initialize Select2 for the tag dropdown with multiple selection enabled
+			tagDropdown.select2({
+				placeholder: "Type to add a tag",
+				allowClear: true,
+				width: '100%',
 			});
 		},
 		oneditsave: function() {
 			this.tagId = $('#node-input-tagId').val(); // Save the selected tagId(s)
+			console.log(this);
 		}
 	});
 </script>
