Updated node names

--- a/nodes/klicktipp-resend-autoresponder.html
+++ b/nodes/klicktipp-resend-autoresponder.html
@@ -88,7 +88,7 @@
 		outputs: 1,
 		icon: 'klicktipp.png',
 		label: function () {
-			return this.name || 'KlickTipp Resend Autoresponder';
+			return this.name || 'Resend Autoresponder';
 		},
 		oneditprepare: function() {
 			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
