--- a/nodes/klicktipp-subscriber-delete.html
+++ b/nodes/klicktipp-subscriber-delete.html
@@ -75,7 +75,7 @@
 		outputs: 1,
 		icon: 'klicktipp.png',
 		label: function () {
-			return this.name || 'KlickTipp Subscriber Delete';
+			return this.name || 'Subscriber Delete';
 		},
 		oneditprepare: function() {
 			ktInitializeTypedInput("#node-input-subscriberId", "#node-input-subscriberIdType", 'num', ['num']);
