--- a/nodes/klicktipp-subscriber-search.html
+++ b/nodes/klicktipp-subscriber-search.html
@@ -75,7 +75,7 @@
 		outputs: 1,
 		icon: 'klicktipp.png',
 		label: function () {
-			return this.name || 'KlickTipp Subscriber Search';
+			return this.name || 'Subscriber Search';
 		},
 		oneditprepare: function() {
 			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
