--- a/nodes/klicktipp-subscription-process-get-redirect.html
+++ b/nodes/klicktipp-subscription-process-get-redirect.html
@@ -87,7 +87,7 @@
 		outputs: 1,
 		icon: 'klicktipp.png',
 		label: function () {
-			return this.name || 'KlickTipp Subscription Process Redirect';
+			return this.name || 'Subscription Process Redirect';
 		},
 		oneditprepare: function() {
 			const listIdDropdown = $('#node-input-listId');
