--- a/nodes/klicktipp-subscription-process-get.html
+++ b/nodes/klicktipp-subscription-process-get.html
@@ -72,7 +72,7 @@
 		outputs: 1,
 		icon: 'klicktipp.png',
 		label: function () {
-			return this.name || 'KlickTipp Subscription Process Get';
+			return this.name || 'Subscription Process Get';
 		},
 		oneditprepare: function() {
 			const listIdDropdown = $('#node-input-listId');
