--- a/nodes/klicktipp-tag-create.html
+++ b/nodes/klicktipp-tag-create.html
@@ -90,7 +90,7 @@
 		outputs: 1,
 		icon: 'klicktipp.png',
 		label: function () {
-			return this.name || 'KlickTipp Tag Create';
+			return this.name || 'Tag Create';
 		},
 		oneditprepare: function() {
 			ktInitializeTypedInput("#node-input-tagName", "#node-input-tagNameType", 'str', ['str']);
