--- a/nodes/klicktipp-tag-delete.html
+++ b/nodes/klicktipp-tag-delete.html
@@ -72,7 +72,7 @@
 		outputs: 1,
 		icon: 'klicktipp.png',
 		label: function () {
-			return this.name || 'KlickTipp Tag Delete';
+			return this.name || 'Tag Delete';
 		},
 		oneditprepare: function() {
 			const tagDropdown = $('#node-input-tagId');
