--- a/nodes/klicktipp-tag-get.html
+++ b/nodes/klicktipp-tag-get.html
@@ -72,7 +72,7 @@
 		outputs: 1,
 		icon: 'klicktipp.png',
 		label: function () {
-			return this.name || 'KlickTipp Tag Get';
+			return this.name || 'Tag Get';
 		},
 		oneditprepare: function() {
 			const tagDropdown = $('#node-input-tagId');
