--- a/nodes/klicktipp-tag-update.html
+++ b/nodes/klicktipp-tag-update.html
@@ -99,7 +99,7 @@
 		outputs: 1,
 		icon: 'klicktipp.png',
 		label: function () {
-			return this.name || 'KlickTipp Tag Update';
+			return this.name || 'Tag Update';
 		},
 		oneditprepare: function() {
 			const tagDropdown = $('#node-input-tagId');
