--- a/nodes/klicktipp-field-index.html
+++ b/nodes/klicktipp-field-index.html
@@ -49,7 +49,7 @@
 		outputs: 1,
 		icon: 'klicktipp.png',
 		label: function () {
-			return this.name || 'KlickTipp Field Index';
+			return this.name || 'Field Index';
 		},
 	});
 </script>
