--- a/nodes/klicktipp-subscriber-tagged.html
+++ b/nodes/klicktipp-subscriber-tagged.html
@@ -72,7 +72,7 @@
 		outputs: 1,
 		icon: 'klicktipp.png',
 		label: function () {
-			return this.name || 'KlickTipp Subscriber Tagged';
+			return this.name || 'Subscriber Tagged';
 		},
 		oneditprepare: function() {
 			const tagDropdown = $('#node-input-tagId');
