--- a/nodes/klicktipp-subscriber-update.html
+++ b/nodes/klicktipp-subscriber-update.html
@@ -123,7 +123,7 @@
 		outputs: 1,
 		icon: 'klicktipp.png',
 		label: function () {
-			return this.name || 'KlickTipp Subscriber Update';
+			return this.name || 'Subscriber Update';
 		},
 		oneditprepare: function() {
 			const contactListContainer = $('#contact-fields-section');
